--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html>
   
  <head>
-  <tite>Adventures in HTML</tite> 
+  <tite></tite> 
   </head>
   
   <body>
     <p>
-      Salutations and greetings! Take a look and you'll be in a world of pure documentation
+      Never get caught lacking 
     </p>
   </body>
 </html> 
-<body style="background-color:crimson;">
+<body style="background-color:teal;">
 
-<h1>WHY ARE WE HERE?</h1>
+<h1>TONIC WATER WHY?</h1>
 <p>Science does not have the answer.</p>
 But this link does
   <a href="https://dimension20.fandom.com/wiki/Wretchrot">Right here</a>
+  <br><br><br><br>
+  <img src="https://huong.github.io/gif/gif/koye1.gif"/>
 </body>
